@@ -16,10 +16,10 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
@@ -34,13 +34,12 @@ import java.util.regex.Pattern;
 @ContextConfiguration(classes = {ErrorManagerTest.TestController.class, ErrorManager.class})
 class ErrorManagerTest {
 
-  public static final String EXPECTED_DEFAULT_ERROR = "{\"code\":\"Error\",\"message\":\"Something gone wrong\"}";
   @Autowired
   private MockMvc mockMvc;
 
   private static MemoryAppender memoryAppender;
 
-  @SpyBean
+  @MockitoSpyBean
   private TestController testControllerSpy;
 
   @RestController
@@ -88,22 +87,19 @@ class ErrorManagerTest {
     Mockito.doThrow(new ClientExceptionWithBody(HttpStatus.BAD_REQUEST, "Error","Error ClientExceptionWithBody"))
         .when(testControllerSpy).testEndpoint();
 
-    String errorClientExceptionWithBody= "{\"code\":\"Error\",\"message\":\"Error ClientExceptionWithBody\"}";
 
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(MockMvcResultMatchers.status().isBadRequest())
-        .andExpect(MockMvcResultMatchers.content().json(errorClientExceptionWithBody));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"));
 
     Mockito.doThrow(new ClientExceptionWithBody(HttpStatus.BAD_REQUEST, "Error","Error ClientExceptionWithBody", new Throwable()))
         .when(testControllerSpy).testEndpoint();
 
-    String errorClientExceptionWithBodyWithStatusAndTitleAndMessageAndThrowable= "{\"code\":\"Error\",\"message\":\"Error ClientExceptionWithBody\"}";
-
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(MockMvcResultMatchers.status().isBadRequest())
-        .andExpect(MockMvcResultMatchers.content().json(errorClientExceptionWithBodyWithStatusAndTitleAndMessageAndThrowable));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"));
 
   }
 
@@ -116,7 +112,7 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-        .andExpect(MockMvcResultMatchers.content().json(EXPECTED_DEFAULT_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"));
 
     checkStackTraceSuppressedLog(memoryAppender, "A ClientException occurred handling request GET /test: HttpStatus null - null at UNKNOWN");
     memoryAppender.reset();
@@ -127,7 +123,7 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-        .andExpect(MockMvcResultMatchers.content().json(EXPECTED_DEFAULT_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"));
 
     checkStackTraceSuppressedLog(memoryAppender, "A ClientException occurred handling request GET /test: HttpStatus 400 BAD_REQUEST - ClientException with httpStatus and message at it.gov.pagopa.common.web.exception.ErrorManagerTest\\$TestController.testEndpoint\\(ErrorManagerTest.java:[0-9]+\\)");
     memoryAppender.reset();
@@ -139,7 +135,7 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-        .andExpect(MockMvcResultMatchers.content().json(EXPECTED_DEFAULT_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"));
 
     checkLog(memoryAppender,
             "Something went wrong handling request GET /test: HttpStatus 400 BAD_REQUEST - ClientException with httpStatus, message and throwable",
@@ -156,18 +152,18 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-        .andExpect(MockMvcResultMatchers.content().json(EXPECTED_DEFAULT_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"));
   }
 
   public static void checkStackTraceSuppressedLog(MemoryAppender memoryAppender, String expectedLoggedMessage) {
-    String loggedMessage = memoryAppender.getLoggedEvents().get(0).getFormattedMessage();
+    String loggedMessage = memoryAppender.getLoggedEvents().getFirst().getFormattedMessage();
     Assertions.assertTrue(Pattern.matches(expectedLoggedMessage, loggedMessage),
             "Unexpected logged message: " + loggedMessage);
   }
 
 
   public static void checkLog(MemoryAppender memoryAppender, String expectedLoggedMessageRegexp, String expectedLoggedExceptionMessage, String expectedLoggedExceptionOccurrencePosition) {
-    ILoggingEvent loggedEvent = memoryAppender.getLoggedEvents().get(0);
+    ILoggingEvent loggedEvent = memoryAppender.getLoggedEvents().getFirst();
     IThrowableProxy loggedException = loggedEvent.getThrowableProxy();
     StackTraceElementProxy loggedExceptionOccurrenceStackTrace = loggedException.getStackTraceElementProxyArray()[0];
 
